@@ -93,85 +93,85 @@
   percussive-instrument-init-settings
   `((drums
     . (
-	   (acousticbassdrum default 	#f	  ,(ly:make-pitch -1 4 0))
-	   (bassdrum	  default 	#f	  ,(ly:make-pitch -1 4 0))
-	   (sidestick	  cross		#f	  ,(ly:make-pitch 0 1 0))
-	   (acousticsnare	  default 	#f	  ,(ly:make-pitch 0 1 0))
-	   (snare		  default 	#f	  ,(ly:make-pitch 0 1 0))
-	   (handclap	  triangle	#f	  ,(ly:make-pitch 0 1 0))
-	   (electricsnare	  default 	#f	  ,(ly:make-pitch 0 1 0))
-	   (lowfloortom	  default 	#f	  ,(ly:make-pitch -1 3 0))
-	   (closedhihat	  cross		"stopped" ,(ly:make-pitch 0 3 0))
-	   (hihat		  cross		#f	  ,(ly:make-pitch 0 3 0))
-	   (highfloortom	  default 	#f	  ,(ly:make-pitch -1 5 0))
-	   (pedalhihat	  cross		#f	  ,(ly:make-pitch -1 2 0))
-	   (lowtom		  default 	#f	  ,(ly:make-pitch -1 6 0))
-	   (openhihat	  cross		"open"	  ,(ly:make-pitch 0 3 0))
-	   (halfopenhihat	  xcircle	#f	  ,(ly:make-pitch 0 3 0))
-	   (lowmidtom	  default 	#f	  ,(ly:make-pitch 0 0 0))
-	   (himidtom	  default 	#f	  ,(ly:make-pitch 0 2 0))
-	   (crashcymbala	  xcircle 	#f	  ,(ly:make-pitch 0 5 0))
-	   (crashcymbal	  xcircle 	#f	  ,(ly:make-pitch 0 5 0))
-	   (hightom	  default 	#f	  ,(ly:make-pitch 0 4 0))
-	   (ridecymbala	  cross		#f	  ,(ly:make-pitch 0 5 0))
-	   (ridecymbal	  cross		#f	  ,(ly:make-pitch 0 5 0))
-	   (chinesecymbal	  mensural 	#f	  ,(ly:make-pitch 0 5 0))
-	   (ridebell	  default	#f	  ,(ly:make-pitch 0 5 0))
-	   (splashcymbal	  diamond 	#f	  ,(ly:make-pitch 0 5 0))
-	   (cowbell	  triangle	#f	  ,(ly:make-pitch 0 5 0))
-	   (crashcymbalb	  cross		#f	  ,(ly:make-pitch 0 5 0))
-	   (vibraslap	  diamond 	#f	  ,(ly:make-pitch 0 4 0))
-	   (ridecymbalb	  cross		#f	  ,(ly:make-pitch 0 5 0))
-	   ))
+	(acousticbassdrum default	#f	  ,(ly:make-pitch -1 4 0))
+	(bassdrum	  default 	#f	  ,(ly:make-pitch -1 4 0))
+	(sidestick	  cross		#f	  ,(ly:make-pitch 0 1 0))
+	(acousticsnare	  default 	#f	  ,(ly:make-pitch 0 1 0))
+	(snare		  default 	#f	  ,(ly:make-pitch 0 1 0))
+	(handclap	  triangle	#f	  ,(ly:make-pitch 0 1 0))
+	(electricsnare	  default 	#f	  ,(ly:make-pitch 0 1 0))
+	(lowfloortom	  default 	#f	  ,(ly:make-pitch -1 3 0))
+	(closedhihat	  cross		"stopped" ,(ly:make-pitch 0 3 0))
+	(hihat		  cross		#f	  ,(ly:make-pitch 0 3 0))
+	(highfloortom	  default 	#f	  ,(ly:make-pitch -1 5 0))
+	(pedalhihat	  cross		#f	  ,(ly:make-pitch -1 2 0))
+	(lowtom		  default 	#f	  ,(ly:make-pitch -1 6 0))
+	(openhihat	  cross		"open"	  ,(ly:make-pitch 0 3 0))
+	(halfopenhihat	  xcircle	#f	  ,(ly:make-pitch 0 3 0))
+	(lowmidtom	  default 	#f	  ,(ly:make-pitch 0 0 0))
+	(himidtom	  default 	#f	  ,(ly:make-pitch 0 2 0))
+	(crashcymbala	  xcircle 	#f	  ,(ly:make-pitch 0 5 0))
+	(crashcymbal	  xcircle 	#f	  ,(ly:make-pitch 0 5 0))
+	(hightom	  default 	#f	  ,(ly:make-pitch 0 4 0))
+	(ridecymbala	  cross		#f	  ,(ly:make-pitch 0 5 0))
+	(ridecymbal	  cross		#f	  ,(ly:make-pitch 0 5 0))
+	(chinesecymbal	  mensural 	#f	  ,(ly:make-pitch 0 5 0))
+	(ridebell	  default	#f	  ,(ly:make-pitch 0 5 0))
+	(splashcymbal	  diamond 	#f	  ,(ly:make-pitch 0 5 0))
+	(cowbell	  triangle	#f	  ,(ly:make-pitch 0 5 0))
+	(crashcymbalb	  cross		#f	  ,(ly:make-pitch 0 5 0))
+	(vibraslap	  diamond 	#f	  ,(ly:make-pitch 0 4 0))
+	(ridecymbalb	  cross		#f	  ,(ly:make-pitch 0 5 0))
+      ))
 
   (timbales
    . (
-      (losidestick	  cross		#f	  ,(ly:make-pitch -1 6 0))
-      (lotimbale	  default	#f	  ,(ly:make-pitch -1 6 0))
-      (cowbell	  triangle	#f	  ,(ly:make-pitch 0 2 0))
-      (hisidestick	  cross		#f	  ,(ly:make-pitch 0 1 0))
-      (hitimbale	  default	#f	  ,(ly:make-pitch 0 1 0))
+	(losidestick	  cross		#f	  ,(ly:make-pitch -1 6 0))
+	(lotimbale	  default	#f	  ,(ly:make-pitch -1 6 0))
+	(cowbell	  triangle	#f	  ,(ly:make-pitch 0 2 0))
+	(hisidestick	  cross		#f	  ,(ly:make-pitch 0 1 0))
+	(hitimbale	  default	#f	  ,(ly:make-pitch 0 1 0))
       ))
 
   (congas
    . (
-      (losidestick	  cross		#f	  ,(ly:make-pitch -1 6 0))
-      (loconga	  default	#f	  ,(ly:make-pitch -1 6 0))
-      (openloconga      default       "open"    ,(ly:make-pitch -1 6 0))
-      (muteloconga      default       "stopped" ,(ly:make-pitch -1 6 0))
-      (hisidestick	  cross		#f	  ,(ly:make-pitch 0 1 0))
-      (hiconga	  default	#f	  ,(ly:make-pitch 0 1 0))
-      (openhiconga      default       "open"    ,(ly:make-pitch 0 1 0))
-      (mutehiconga      default       "stopped" ,(ly:make-pitch 0 1 0))
+	(losidestick	  cross		#f	  ,(ly:make-pitch -1 6 0))
+	(loconga	  default	#f	  ,(ly:make-pitch -1 6 0))
+	(openloconga      default       "open"    ,(ly:make-pitch -1 6 0))
+	(muteloconga      default       "stopped" ,(ly:make-pitch -1 6 0))
+	(hisidestick	  cross		#f	  ,(ly:make-pitch 0 1 0))
+	(hiconga	  default	#f	  ,(ly:make-pitch 0 1 0))
+	(openhiconga      default       "open"    ,(ly:make-pitch 0 1 0))
+	(mutehiconga      default       "stopped" ,(ly:make-pitch 0 1 0))
       ))
 
   (bongos
     . (
-       (losidestick	  cross		#f	  ,(ly:make-pitch -1 6 0))
-       (lobongo	  default	#f	  ,(ly:make-pitch -1 6 0))
-       (openlobongo      default       "open"    ,(ly:make-pitch -1 6 0))
-       (mutelobongo      default       "stopped" ,(ly:make-pitch -1 6 0))
-       (hisidestick	  cross		#f	  ,(ly:make-pitch 0 1 0))
-       (hibongo	  default	#f	  ,(ly:make-pitch 0 1 0))
-       (openhibongo      default       "open"    ,(ly:make-pitch 0 1 0))
-       (mutehibongo      default       "stopped" ,(ly:make-pitch 0 1 0))
-       ))
+ 	(losidestick	  cross		#f	  ,(ly:make-pitch -1 6 0))
+	(lobongo	  default	#f	  ,(ly:make-pitch -1 6 0))
+	(openlobongo      default       "open"    ,(ly:make-pitch -1 6 0))
+	(mutelobongo      default       "stopped" ,(ly:make-pitch -1 6 0))
+	(hisidestick	  cross		#f	  ,(ly:make-pitch 0 1 0))
+	(hibongo	  default	#f	  ,(ly:make-pitch 0 1 0))
+	(openhibongo      default       "open"    ,(ly:make-pitch 0 1 0))
+	(mutehibongo      default       "stopped" ,(ly:make-pitch 0 1 0))
+      ))
 
 
   (percussion
    . (
-      (opentriangle	  cross		"open"	  ,(ly:make-pitch 0 0 0))
-      (mutetriangle	  cross		"stopped" ,(ly:make-pitch 0 0 0))
-      (triangle	  cross		#f	  ,(ly:make-pitch 0 0 0))
-      (shortguiro	  default	"staccato",(ly:make-pitch 0 0 0))
-      (longguiro	  default	"tenuto"  ,(ly:make-pitch 0 0 0))
-      (guiro		  default	#f	  ,(ly:make-pitch 0 0 0))
-      (cowbell	  triangle	#f	  ,(ly:make-pitch 0 0 0))
-      (claves		  default	#f	  ,(ly:make-pitch 0 0 0))
-      (tambourine	  default	#f	  ,(ly:make-pitch 0 0 0))
-      (cabasa		  cross		#f	  ,(ly:make-pitch 0 0 0))
-      (maracas	  default	#f	  ,(ly:make-pitch 0 0 0))
-      (handclap	  default	#f	  ,(ly:make-pitch 0 0 0))
+	(opentriangle	  cross		"open"	  ,(ly:make-pitch 0 0 0))
+	(mutetriangle	  cross		"stopped" ,(ly:make-pitch 0 0 0))
+	(triangle	  cross		#f	  ,(ly:make-pitch 0 0 0))
+	(shortguiro	  default	"staccato",(ly:make-pitch 0 0 0))
+	(longguiro	  default	"tenuto"  ,(ly:make-pitch 0 0 0))
+	(guiro		  default	#f	  ,(ly:make-pitch 0 0 0))
+	(cowbell	  triangle	#f	  ,(ly:make-pitch 0 0 0))
+	(claves		  default	#f	  ,(ly:make-pitch 0 0 0))
+	(tambourine	  default	#f	  ,(ly:make-pitch 0 0 0))
+	(cabasa		  cross		#f	  ,(ly:make-pitch 0 0 0))
+	(maracas	  default	#f	  ,(ly:make-pitch 0 0 0))
+	(handclap	  default	#f	  ,(ly:make-pitch 0 0 0))
       ))
   ))
 
@@ -255,7 +255,7 @@
              )
          (add-articulation-script req-ch script)
          (ly:set-mus-property! fe 'pitch pitch)
-         (set! req-ch (make-thread-context style seq))
+         (set! req-ch (make-thread-context (symbol->string style) seq))
 	 req-ch
        )
       )
